# mining-data-platform

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
database/: migrate.py  queries.sql
database/schema/: 01_customers.sql  02_products.sql  03_suppliers.sql  04_employees.sql  05_warehouses.sql  06_sales_orders.sql  07_invoices_payments.sql  08_inventory.sql  09_purchase_orders.sql  10_operational_costs.sql  11_service_records.sql
ingestion/: generate_data.py
ml/churn_prediction/: train.py
ml/demand_forecasting/: model.pkl  train.py
tests/: test_pipelines.py
transform/mining/: dbt_project.yml
transform/mining/models/marts/: mart_inventory.sql  mart_revenue.sql
transform/mining/models/staging/: sources.yml  stg_customers.sql  stg_customers.yml  stg_products.sql  stg_products.yml  stg_sales.sql  stg_sales.yml
venv-dbt/: pyvenv.cfg
